--- a/.editorconfig
+++ b/.editorconfig
@@ -81,3 +81,6 @@ csharp_new_line_before_members_in_anonymous_types = true
 
 # Braces after if 
 csharp_prefer_braces = false
+
+# CS0618: Type or member is obsolete
+dotnet_diagnostic.CS0618.severity = error
